# twentyfive

./: .gitignore  AI_APPROACHES.md  CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md  RULES.md  STRATEGY.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: post-edit-format.sh
tests/: test_ai_enhanced_heuristic.py  test_ai_ismcts.py  test_ai_mcts.py  test_ai_player.py  test_benchmark.py  test_card.py  test_controller.py  test_deck.py  test_engine.py  test_rules.py  test_ui_loader.py
twentyfive/: __init__.py  __main__.py  benchmark.py  twentyfive.py
twentyfive/ai/: AI_APPROACHES.md  BENCHMARKING.md  __init__.py  enhanced_heuristic.py  heuristic.py  ismcts.py  mcts.py  player.py
twentyfive/cards/: __init__.py  card.py  deck.py
twentyfive/common/: deck.py  game.py  player.py  table.py
twentyfive/game/: __init__.py  audit.py  engine.py  player.py  rules.py  state.py
twentyfive/ui/: UI_DEVELOPMENT.md  cli.py  controller.py  tactical_ui.py
twentyfive/ui/cli/: README.md  __init__.py
twentyfive/ui/pygame_ui/: __init__.py  pygame_ui.py
twentyfive/ui/tactical_ui/: README.md  __init__.py  animation.py  bg.py  constants.py  setup.py  sounds.py  tactical_ui.py  widgets.py
