[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twentyfive"
version = "0.1.0"
authors = [
  { name="Peter Clarke", email="pete@clarkez.co.uk" },
]
description = "A program to implement Twenty-Five, Irelands National Card Game"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/peteclarkez/twentyfive"
"Bug Tracker" = "https://github.com/peteclarkez/twentyfive/issues"