[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twentyfive"
version = "0.1.0"
authors = [
  { name="Peter Clarke", email="pete@clarkez.co.uk" },
]
description = "A program to implement Twenty-Five, Irelands National Card Game"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
"Homepage" = "https://github.com/peteclarkez/twentyfive"
"Bug Tracker" = "https://github.com/peteclarkez/twentyfive/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true